# gleaner

./: .gcloudignore  .gitignore  DATA_STORAGE.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: deploy.yml
backend/: db.py  requirements.txt
backend/ops/: backfill_counters.py  backfill_ide.py  backfill_tags.py  backfill_topics.py  purge_worthless.py
docs/: collected-data.md  data_storage.dot  ingestion.dot
docs/workspace/: Maitre — Enrichment feasibility.md
gleaner/: backfill.py  cc_format.py  cli.py  config.py  cursor.py  cursor_upload.py  pull.py  schema.py  scrub.py  tags.py  upload.py  vault.py
gleaner_cli/: backfill.py  cli.py  config.py  upload.py
hooks/: hooks.json
ops/: backfill_counters.py  backfill_tags.py  purge_worthless.py  scrub_cloud.py
scripts/: backfill.py  backfill_counters.py  backfill_topics.py  scrub.py  scrub_cloud.py  test_e2e.py  test_scrub.py  upload-session.py  upload_session_lib.py
server/: Dockerfile  __main__.py  dashboard.css  dashboard.html  dashboard.js  db.py  db_local.py  db_mock.py  deploy.sh  migrate_root_user.py  server.py
server/js/: api.js  app.js  auth.js  home.js  onboarding.js  sessions.js  settings.js  team.js  util.js
tests/: conftest.py  test_config.py  test_cursor.py  test_db_local.py  test_e2e.py  test_js_util.py  test_pull.py  test_scrub.py  test_server_api.py  test_upload.py  test_vault.py
