[project]
name = "gleaner-cli"
version = "0.1.0"
description = "Upload Claude Code session transcripts to Gleaner"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
gleaner-upload = "gleaner_cli.upload:main"
gleaner-backfill = "gleaner_cli.backfill:main"

[project.optional-dependencies]
scrub = ["piicleaner", "detect-secrets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gleaner_cli"]
