[project]
name = "gleaner"
version = "0.1.1"
description = "Upload Claude Code session transcripts to Gleaner"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["piicleaner", "detect-secrets", "pydantic>=2"]

[project.scripts]
gleaner = "gleaner.cli:main"
gleaner-upload = "gleaner.upload:main"
gleaner-backfill = "gleaner.backfill:main"
gleaner-pull = "gleaner.pull:main"
gleaner-cursor-upload = "gleaner.cursor_upload:main"
arcade-hook = "arcade.handler:main"
arcade = "arcade.install:main"

[project.optional-dependencies]
pull = [
    "pyarrow",
]
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pyarrow",
]
presidio = [
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
]
arcade = [
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gleaner", "arcade", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
